--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Tableau de bord</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <h1>Bienvenue <%= user.username %> 👋</h1>
+  <ul>
+    <li><a href="/school">📚 Aide scolaire</a></li>
+    <li><a href="/codegen">💻 Générateur de code</a></li>
+    <li><a href="/imgen">🎨 Générateur d'images</a></li>
+  </ul>
+</body>
+</html>
