--- a/views/school.ejs
+++ b/views/school.ejs
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Aide scolaire</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <h1>📚 Aide scolaire</h1>
+  <p>Ici tu pourras poser tes questions et afficher des leçons (à compléter plus tard).</p>
+</body>
+</html>
