--- a/views/codegen.ejs
+++ b/views/codegen.ejs
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Générateur de code</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <h1>💻 Générateur de code</h1>
+  <p>Ici tu pourras demander du code en JS, Python, etc. (fonctionnalité à compléter).</p>
+</body>
+</html>
